# a-chat

./: .gitignore  .prettierignore  LICENSE  README.md  masterplan.txt  package.json  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml  node.js.yml  rust.yml
.yarn/patches/: passport-http-bearer-npm-1.0.1-482b7dfd57.patch  vue-spinner-npm-1.0.4-efea910b00.patch
api/: package.json  tsconfig.json
api/prisma/: schema.prisma
api/scripts/: createuser.mjs  initDb.mjs
api/src/: app.module.ts  main.ts  repl.ts
api/src/adapters/: socketio-admin.ts  socketio.ts
api/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  bearer.strategy.spec.ts  bearer.strategy.ts  jwt.strategy.ts  local.strategy.spec.ts  local.strategy.ts  serialization.provider.ts
api/src/chat/: chat.controller.spec.ts  chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.spec.ts  chat.service.ts
api/src/config/: index.ts
api/test/: app.e2e-spec.ts
backend/: Cargo.toml
backend/src/: app.rs  main.rs
backend/src/database/: mod.rs
backend/src/database/models/: chat.rs  message.rs  mod.rs  session.rs  user.rs
backend/src/routes/: auth.rs  chat.rs  mod.rs  users.rs  ws.rs
backend/src/util/: config.rs  constants.rs  mod.rs  result.rs
backend/src/util/extractors/: auth.rs  json.rs  mod.rs  query.rs
frontend/: index.html  package.json  tailwind.config.js
web/: index.html  masterplan.txt  package.json  tailwind.config.js  vercel.json  vite.config.js
web/src/: App.vue  main.js
(+98 files in other folders)
