[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.6.6", features = ["macros", "ws"] }
axum-macros = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "add-extension"
] }
validator = { version = "0.16.0", features = ["derive"] }
# data_layer = { path = "../data_layer" }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
http = "0.2.9"
anyhow = "1.0.69"
thiserror = "1.0.39"
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "offline"] }
once_cell = "1.18.0"
regex = "1.9.3"
dotenvy = "0.15.7"
ulid = "1.0.0"
bcrypt = "0.15.0"
mongodb = "2.6.1"
nanoid = "0.4.0"
futures-util = "0.3.28"
async-trait = "0.1.74"
dashmap = "5.5.3"
